Fix ripple overlay by using z-index and overflow

--- a/content-script.css
+++ b/content-script.css
@@ -66,6 +66,7 @@ span.ista-ripple-container {
        pointer-events  : none;
        border-radius   : inherit;
        display         : block;
+       z-index         : 1;
 }
 
 span.ista-ripple {
